--- a/game.css
+++ b/game.css
@@ -20,6 +20,9 @@ body {
   align-self: center;
   align-items: center;
   padding: 20px;
+  background-color: #1e2034;
+  border-radius: 10%;
+  box-shadow: 0 0 0 0;
 }
 .tab {
   margin-top: 20px;
@@ -125,5 +128,12 @@ td:hover {
 @media (max-width: 790px) {
   .content {
     flex-direction: column;
+  }
+  table {
+    margin-top: 5px;
+  }
+  td {
+    width: 100px;
+    height: 100px;
   }
 }
