--- a/game.css
+++ b/game.css
@@ -141,3 +141,19 @@ td:hover {
     font-size: 64px;
   }
 }
+.contacts {
+  /* background-color: #1e2034; */
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.fa {
+  font-size: 24px;
+  padding: 5px;
+  color: white;
+}
+
+.fa:hover {
+  box-shadow: 3px 2px 0 0;
+}
